# ggbowlscalendar

./: .coveragerc  .env.VSR90XMQDH  .env.VSR90XMQDH-ubuntu  .env.asus-laptop  .env.bfs-eng-6  .env.bfs-product-1  .env.docker  .env.garydell-ubuntu  .env.garydell-win-fallsbc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  DataFormats.adoc  Dockerfile  Dockerfile copy  Dockerfile-simple  README.adoc  README.md  docker-build.bat  docker-build.sh  docker-debug.sh  docker-entrypoint.sh  docker-run.bat  docker-run.sh  logging.yml  main.py  poetry-add.sh  pyproject.toml  requirements.txt  sonar-project.properties
.github/: copilot-instructions.md
data/: Dockerfile  docker-build.bat  docker-build.sh  docker-debug-bash.bat  docker-pull.bat  docker-push.sh  docker-run.bat  docker-run.sh  opponents.yml  readme.adoc  results.yml  teams.yml
generate/: README.md  fallsbelfast2_matches_2022-23.yml  fallsbelfast_matches_2022-23.yml  generate.py  logging.yml  matches comps.txt  matches fallsbelfast.txt  matches indoor.txt  matches indoorb.txt  matches ladies e1.txt  matches ladies e2.txt  matches ladies.txt  matches midweeka.txt  matches midweekb.txt  matches outdoora.txt  matches outdoorb.txt  matches stcolmans.txt  matches vets1.txt  matches vets2.txt  stcolmans_matches_2022-23.yml
ggbowlscalendar/: __init__.py  bowlscalendar.py  calendar.py  events.py  league_results_manager.py  match.py  match_printer.py  match_printer.pyXX  models.py  printer.py  results_table_ical.py  results_table_printer.py  team_manager.py  utils.py
tests/: conftest.py  context.py  test_Match.py  test_Match.pyXX  test_calendar.py  test_models.py  (+5 more)
(+122 files in other folders)
