[tool.poetry]
name = "ggbowlscalendar"
version = "0.1.0"
description = ""
authors = ["Gary McWilliams <gary.mcwilliams@verint.com>"]

[tool.poetry.dependencies]
python = "^3.8"
envparse = "^0.2.0"
PyYAML = "^5.4.1"
icalendar = "^4.0.7"
strictyaml = "^1.4.0"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
pylama = "^7.7.1"
pytest = "^6.2.4"
rope = "^0.19.0"
black = "^21.5b1"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
