[tool.poetry]
name = "ggbowlscalendar"
version = "0.3.0"
description = ""
authors = ["Gary McWilliams <gary.mcwilliams@verint.com>"]

[tool.poetry.dependencies]
python = "^3.10"
envparse = "^0.2.0"
PyYAML = "^6.0.3"
icalendar = "^7.0.2"
rich = "^14.3.3"

[tool.poetry.dev-dependencies]
pylint = "^4.0.5"
pylama = "^7.7.1"
pytest = "^8.2.0"
pytest-cov = "^7.0.0"
rope = "^1.14.0"
black = "^26.1.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
